@@ -1,3 +1,10 @@
+2008-03-20  Tyler Romeo  <tylerromeo@gmail.com>
+
+	*app/models/Request.py (Request.putInfo): Function now updates 
+changes to database, or loads the request if not loaded yet.
+
+	Created simple bootstrapper in root directory.
+
 2008-03-18  Tyler Romeo  <tylerromeo@gmail.com>
 
 	Created draft Request model.
